--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ header{
     font-size: large;
     font-style: italic;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.559);
+    border-radius: 20px 20px 20px 20px;
 }
 .barra{
     padding: 5px;
@@ -44,7 +45,7 @@ header{
     font-family: sans-serif;
 }
 
-
+/*main*/
 
 main h1 span{
     color: brown;
@@ -101,3 +102,46 @@ font-weight: 100; /*el grosor de las letras*/
 
 
 /*footer*/
+footer{
+    background-color: rgba(107, 107, 155, 0.701);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+}
+footer div h2 {
+    color: blue;
+    background-color: rgba(240, 248, 255, 0);
+    padding: 10px;
+    object-position: center;
+    margin: 2px;
+    text-decoration: none;
+    font-family: sans-serif;
+    font-size: large;
+    font-style: italic;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.559);
+    border-radius: 20px 20px 20px 20px;
+}
+.barrafooter nav ul {
+    list-style: none;
+    display: flex;
+    column-gap: 15px;
+    text-decoration: none;
+    }
+.barrafooter nav ul li a{
+    text-decoration: none;
+    color:white;
+    font-size: 15px;
+    font-family: sans-serif;
+}
+.logoRedes {
+    width: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+.logoRedes a img {
+    width: 30px;
+    height: 30px;
+    object-fit: contain;
+}
