--- a/css/style.css
+++ b/css/style.css
@@ -7,27 +7,23 @@
 
 /* header */
 header{
-    background-color: rgba(107, 107, 155, 0.701);
+    background-color: rgb(0, 0, 0);
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0rem 2rem 0rem 2rem;
     position: sticky;
     top: 0%;
+    box-shadow: 9px 5px 18px 0px rgba(0, 0, 0, 0.7);
+    -webkit-box-shadow: 9px 5px 18px 0px rgba(0, 0, 0, 0.7);
+    -moz-box-shadow: 9px 5px 18px 0px rgba(0, 0, 0, 0.7);
+    border-radius: 1px 1px 20px 20px;
 }
-.button{
-    padding: 20px;
-}
-.logo{
-    background-color: rgba(240, 248, 255, 0);
-    padding: 10px;
-    object-position: center;
-    margin: 2px;
-    text-decoration: none;
-    font-family: sans-serif;
-    font-size: large;
-    font-style: italic;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.559);
-    border-radius: 20px 20px 20px 20px;
+.logo img{
+    display: flex;
+    width: 60px;
+    height: 60px;
+    object-fit: contain;
 }
 .barra{
     padding: 5px;
@@ -44,28 +40,268 @@ header{
     font-size: 15px;
     font-family: sans-serif;
 }
-
-/*main*/
-
-main h1 span{
-    color: brown;
+.barra nav ul li a:hover{
+    color: rgb(255, 0, 0);
 }
-header p{
+
+/*main-index*/
+
+main{
+    background-image: url(../assets/img/fondo.svg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.titulo{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 3% 0% 3% 0%;
+    width: 50%;
+    height: 100px;
+    border-radius: 15px;
+    box-shadow: 9px 5px 18px 0px rgba(0, 0, 0, 0.7);
+    -webkit-box-shadow: 9px 5px 18px 0px rgba(0, 0, 0, 0.7);
+    -moz-box-shadow: 9px 5px 18px 0px rgba(0, 0, 0, 0.7);
+    background-color:rgb(0, 0, 0);
+    font-family: "Lavishly Yours", cursive;
+}
+.titulo img{
+    width: 60px;
+    height: 60px;
+    object-fit: contain;
+}
+.titulo h1{
     text-align: center;
+    font-size: 65PX;
+    color: white;
+}
+main h1 span{
+    color: rgb(255, 0, 0);
+}
+.frase{
+    text-align: center;
+    width: 100%;
+    font-style: italic;
+    font-family: sans-serif;
+    font-size: large;
     text-decoration: underline;
-    text-transform: uppercase;
 }
 .destacados{
+    color: white;
     text-align: center;
-    background-color: rgba(63, 59, 59, 0.359);
+    background-color: rgb(0, 0, 0);
+    box-shadow: 9px 5px 18px 0px rgba(0, 0, 0, 0.7);
     text-transform: uppercase;
     width: 500px;
+    margin: 5% 25% 2px 25%;
+    border-radius: 5px;
+}
+.fotos-guitarras{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+.fotos-guitarras img{
+    margin-top: 10px;
+    width: auto;
+    height: 400px;
+    object-fit: contain;
+    box-shadow: 6px 8px 16px -7px rgba(0,0,0,0.65);
+    -webkit-box-shadow: 6px 8px 16px -7px rgba(0,0,0,0.65);
+    -moz-box-shadow: 6px 8px 16px -7px rgba(0,0,0,0.65);
+}
+.contenedor-cards{
+    display: flex;
+    width: 100%;
+    height: 500px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap: 100px;
+    align-items: center;
+}
+.card{
+    width: 250px;
+    height: 350px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px black;
+    margin: 5px;
+    background-color: rgb(0, 0, 0);
+}
+.card .card-img{
+    width: 100%;
+    height: 60%;
+    margin-top: 2.5%;
+}
+.card-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.card-info{
+    text-align: center;
+    color: white;
+}
+.card-info button{
+    padding: 1%;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+.card-info button:hover{
+    background-color: rgba(255, 0, 0, 0.626);
+    color: white;
+}
+.card-info ul{
+    list-style: none;
+}
+.entrega {
+    color: rgb(255, 255, 255);
+    margin: 2px 15% 2px 15%;
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 5px;
+    background-color: rgba(128, 128, 128, 0.688);
+}
+.quienes-somos{
+    color: white;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    width: 100%;
+    height: 500px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5%;
+    box-shadow: 5px 5px 10px black;
+}
+.quienes-somos article{
+    margin: 5%;
+}
+.quienes-somos article p{
+    margin: 2%;
 }
 
-.titulo{
+/*main-guitarras*/
+
+main h2 span{
+    color: rgb(255, 0, 0);
+}
+.encabezado-pages{
+    background-color: white;
+    width: 100%;
+    height: auto;
+}
+
+.titulo-pages {
+    margin: 5%;
+    font-size: 80px;
+    font-family: "Lavishly Yours", cursive;
+
+}
+.contenedor-cards2{
+    display: flex;
+    margin-top: 20px;
+    width: 100%;
+    height: 500px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap: 100px;
+    align-items: center;
+}
+
+.card-2 p{
+    color: white;
+    margin-top: 50px;
     text-align: center;
-    background-color: rgba(63, 59, 59, 0.359);
-    font-size: 30PX;
+}
+
+.card-2{
+    width: 250px;
+    height: 330px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px black;
+    margin: 5px;
+    background-color: rgb(0, 0, 0);
+}
+.card-2:hover{
+    width: 300px;
+    height: 360px;
+}
+
+.card-2 .card-img{
+    width: 100%;
+    height: 60%;
+    margin-top: 5%;
+}
+
+/*main visitanos*/
+
+.direccion{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 30px;
+    gap: 30px;
+    width: 80%;
+    height: 550px;
+    background-color: gray;
+    box-shadow: 5px 5px 10px black;
+    border-radius: 5px;
+    margin: 10%;
+}
+.input form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.input h3{
+    margin-bottom: 30px;
+}
+.input form input{
+    width: 400px;
+}
+.input-comentarios{
+    display: flex;
+    height: 80px;
+    margin-bottom: 20px;
+}
+
+/*main historia*/
+
+.historia{
+    display: flex;
+    margin-top: 20px;
+    width: 100%;
+    height: 500px;
+    justify-content: space-around;
+    gap: 20px;
+    align-items: center;
+}
+
+.historia .h-img{
+    width: 100%;
+    height: 60%;
+    margin: 0% 5% 0% 5%;
+}
+.historia img {
+    width: auto;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px black;
+    -webkit-box-shadow: 6px 8px 16px -7px rgba(0,0,0,0.65);
+    -moz-box-shadow: 6px 8px 16px -7px rgba(0,0,0,0.65);
+}
+.historia-escrito{
+    background-color: white;
+    font-size: 25px;
+    padding: 0% 5% 0% 5%;
+    font-weight: 200;
+    text-align: justify;
+    border-radius: 10px;
 }
 /*text*
 text-align: center;
@@ -103,25 +339,19 @@ font-weight: 100; /*el grosor de las letras*/
 
 /*footer*/
 footer{
-    background-color: rgba(107, 107, 155, 0.701);
+    background-color: rgb(0, 0, 0);
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 100px;
+    border-radius: 20px 20px 1px 1px;
 }
-footer div h2 {
-    color: blue;
-    background-color: rgba(240, 248, 255, 0);
-    padding: 10px;
-    object-position: center;
-    margin: 2px;
-    text-decoration: none;
-    font-family: sans-serif;
-    font-size: large;
-    font-style: italic;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.559);
-    border-radius: 20px 20px 20px 20px;
+footer div img {
+    display: flex;
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
 }
 .barrafooter nav ul {
     list-style: none;
@@ -135,6 +365,9 @@ footer div h2 {
     font-size: 15px;
     font-family: sans-serif;
 }
+.barrafooter nav ul li a:hover{
+    color: rgb(255, 0, 0);
+}
 .logoRedes {
     width: 100px;
     display: flex;
@@ -145,3 +378,81 @@ footer div h2 {
     height: 30px;
     object-fit: contain;
 }
+
+/*responsive*/
+@media (max-width:1024px){
+    .guitarra2{
+        display: none;
+    }
+    .contenedor-cards{
+        gap: 50px;
+    }
+    .card{
+        width: 180px;
+        height: 280px;
+    }
+    .card-img{
+
+    }
+    .card-info h3{
+        font-size: medium;
+    }
+    .entrega{
+        font-size: small;
+    }
+    .card .card-img{
+        height: 50%;
+    }
+    .quienes-somos img{
+        width: 60%;
+        height: 60%;
+    }
+    .quienes-somos article p{
+        font-size: medium;
+        width: 60%;
+        height: 60%;
+    }
+    .quienes-somos{
+        width: 90%;
+    }
+    .destacados{
+        width: 400px;
+        margin: 5% 15% 2px 15%;
+    }
+    .frase {
+        width: 90%;
+    }
+}
+
+/* .card .card-img{
+    width: 100%;
+    height: 60%;
+    margin-top: 2.5%;
+}
+.card-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+} */
+
+
+
+
+/* .contenedor-cards{
+    display: flex;
+    width: 100%;
+    height: 500px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap: 100px;
+    align-items: center;
+}
+.card{
+    width: 250px;
+    height: 350px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px black;
+    margin: 5px;
+    background-color: rgb(0, 0, 0);
+} */
